Tone down the TW stlying.

--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -3,6 +3,7 @@ $blue: #1ebccd;
 $orange: #f38a3e;
 $violet: #b32059;
 $pink: #ee0b77;
+$red: #e4002b;
 
 $grey-darkest: #bababa;
 $grey-dark: #cacaca;
@@ -16,3 +17,11 @@ $black: #000;
 $grey-text: rgb(51, 51, 51);
 
 $grey-alpha-03: rgba(255, 255, 255, 0.3);
+
+$ring1: #b25da6;
+$ring2: #6688c3;
+$ring3: #48a56a;
+$ring4: #eaaf41;
+$ring5: #ce4a4a;
+
+
