--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -70,7 +70,7 @@ header {
   }
 
   .home-link {
-    color: $pink;
+    color: #2b6ed2;
     margin-bottom: 10px;
     line-height: normal;
     cursor: pointer;
